<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawer"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fuulform"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon" />

    <LinearLayout
        android:id="@+id/fuulform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/meet"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/attach"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/treat"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/enjoy"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:paddingRight="5dp"
            android:text="@string/near"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/heart"
             android:contentDescription="@string/app_name"
             android:layout_weight="1" />

         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/mate"
             android:textColor="@android:color/white"
             android:gravity="center_vertical|left"
             android:textSize="32sp"
             android:paddingLeft="5dp"
             android:layout_weight="1" />
        
    </LinearLayout>

    
   
</RelativeLayout>