<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/header_imageview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:background="@color/test_green"
            android:scaleType="centerCrop" />
        
        <LinearLayout
            android:id="@+id/informations_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_imageview"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="28dp" >

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/counter_text_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp" >

                <TextView
                    android:id="@+id/tv_gender_and_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text=""
                    android:textColor="@color/textcolorblack"
                    android:textSize="15sp" />
                
                 <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/textcolorblack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text=""
                    android:textColor="@color/textcolorblack"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- cheat code: negative margin -->

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_above="@+id/informations_container"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-20dp"
            facebook:preset_size="large" 
            android:background="@null">

        </com.facebook.widget.ProfilePictureView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/tv_aboutme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/about_me" 
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/textcolorblack"/>

        <ImageView
            android:id="@+id/edit_about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_aboutme"
            android:layout_marginRight="5dp"
            android:src="@android:drawable/ic_menu_edit" />

      

        <TextView
            android:id="@+id/tv_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_aboutme"
            android:layout_below="@+id/tv_aboutme"
            android:hint="@string/Sample_about_me"
            android:textColor="@color/textcolorblack"
            android:padding="5dp"
            />
    <!--     
        <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:imeActionId="@+id/action_sign_in"
    android:imeActionLabel="sign_in"
    android:inputType="textPassword" /> -->
                 
        </RelativeLayout>

     
        <TextView
            android:id="@+id/tv_mylikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:text="@string/my_likes"
           android:textColor="@color/textcolorblack"
            android:textSize="20sp" />

      <!-- <GridView
         android:id="@+id/grid_view_likes"
         android:layout_width="wrap_content"
         android:layout_height="500dp"
         android:layout_margin="5dp"
         android:horizontalSpacing="10dp"
         android:numColumns="3"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp" >

        </GridView>  -->
        
      <!--android:layout_height="900dp"  -->
        
       <!--  <ListView
            android:layout_width="wrap_content"
             android:id="@+id/list_view_likes"
            android:layout_height="500dp">
        </ListView> -->
 
 </LinearLayout>
  
   </ScrollView>  
  
   

</LinearLayout>